--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Matteo Palitto",
   "license": "ISC",
   "dependencies": {
+    "express": "*",
     "socket.io": "*",
-    "express": "*"
+    "sqlite3": "^3.1.11"
   }
 }
